--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".meizu.MeiZuActivity">
+        <activity android:name=".MeiZuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
