--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".MeiZuActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".index.IndexActivity" />
-        <activity android:name=".simple.SimpleActivity" />
-        <activity android:name=".colorful.ColorfulActivity" />
-        <activity android:name=".solay.SolarActivity" />
-        <activity android:name=".progress.ProgressActivity" />
-        <activity android:name=".my.MultiActivity" />
     </application>
 
 </manifest>
